xl-up/kubernetes/pg-stack/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: xebialabs
  labels:
    app: grafana
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /grafana/
            backend:
              serviceName: grafana
              servicePort: 3000
